Bug 98067 - Menu bar and right tool bar are invisible, but functional in high-contrast-mode/theme
Summary: Menu bar and right tool bar are invisible, but functional in high-contrast-mo...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: x86-64 (AMD64) Windows (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.3 target:7.3.7
Keywords: accessibility, bibisectRequest, regression
: 107921 141757 149688 (view as bug list)
Depends on:
Blocks: High-Contrast
  Show dependency treegraph
 
Reported: 2016-02-21 21:40 UTC by Martin Lemburg
Modified: 2022-12-12 14:51 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Screenshot showing a wrongly rendered menu bar and right tool bar (31.61 KB, image/png)
2016-02-21 21:40 UTC, Martin Lemburg
Details
2016-04-06 - new screenshot of Writer (34.68 KB, image/png)
2016-04-06 10:03 UTC, Martin Lemburg
Details
Screenshot of the LibreOffice Writer version 5.4.0.3 (29.77 KB, image/png)
2017-08-20 22:33 UTC, Martin Lemburg
Details
Screenshot of the menu bar with selected and opened sub menu (8.69 KB, image/png)
2017-08-20 22:37 UTC, Martin Lemburg
Details
Screenshot of the about dialog documenting the LibreOffice version (27.45 KB, image/png)
2017-08-20 22:38 UTC, Martin Lemburg
Details
Screenshot of the Writer with black menu bar and right side bar (LibreOffcie 5.4.2.2) in high-contrast-mode (30.30 KB, image/png)
2017-11-02 11:50 UTC, Martin Lemburg
Details
Menu compared in MSO and LO 5.0 6.0 7.0 (60.15 KB, image/webp)
2022-09-29 14:06 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Lemburg 2016-02-21 21:40:47 UTC
Created attachment 122855 [details]
Screenshot showing a wrongly rendered menu bar and right tool bar

With high-contrast-mode or black high-contrast-theming (with e.g. high-contrast-#1 theme) the menu bar and the right tool bar are rendered wrongly and are rendered black on black.
Comment 1 Buovjaga 2016-02-28 15:25:56 UTC Comment hidden (obsolete)
Comment 2 Martin Lemburg 2016-02-28 19:31:55 UTC
OpenGL was not switched on!
And switching OpenGL on didn't change a thing!

But ... from my experience in UI development it would surprise me to make really a difference, because the used colors are defined at the level of device context usage, no matter if WGL DC or WIN32 DC!
If the UI would have rendered differently, severe bugs would be the reason, wouldn't it?
Comment 3 Buovjaga 2016-04-06 05:29:49 UTC
I get white on black with high-contrast 1 Windows theme.

Win 7 Pro 64-bit, Version: 5.1.1.3 (x64)
Build ID: 89f508ef3ecebd2cfb8e1def0f0ba9a803b88a6d
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
Locale: fi-FI (fi_FI)
Comment 4 Martin Lemburg 2016-04-06 10:01:52 UTC
I tried again today at my office workstation, which behaves a bit different based on Windows 7 Enterprise (SP1).
Here the menu is white on black, but the right tool bar is still rendered incorrectly.
Comment 5 Martin Lemburg 2016-04-06 10:03:40 UTC
Created attachment 124124 [details]
2016-04-06 - new screenshot of Writer

I created this screenshot on my office workstation running Windows 7 Enterprise instead of Windows 7 Professional.
From my experience high-contrast-mode is not behaving the same here and at home.
Comment 6 Martin Lemburg 2016-04-06 10:04:55 UTC
The screenshot of Writer attached today was created with LibreOffice 5.1.1.3, while the bug got created for LibreOffice 5.1.0.3.
Comment 7 Buovjaga 2016-04-07 05:15:03 UTC
Sorry about that, I do confirm the sidebar thing (already in 4.3).
Comment 8 Xisco Faulí 2017-08-17 16:32:05 UTC
Hi Martin,
i have the feeling this issue might be fixed.
Could you please try to reproduce it with the latest version of LibreOffice from https://www.libreoffice.org/download/libreoffice-fresh/ ?
Comment 9 Martin Lemburg 2017-08-20 22:33:22 UTC
Created attachment 135678 [details]
Screenshot of the LibreOffice Writer version 5.4.0.3

Thanks for the advise to test again.

I tested on Win10Pro (high-contrast-mode enabled) with LibreOffice 5.4.0.3 and

The menu is still black, active sub menus are black on violet.
The toolbar on the right is black, too.

Two screenshots will follow as attachments.
Comment 10 Martin Lemburg 2017-08-20 22:37:07 UTC
Created attachment 135679 [details]
Screenshot of the menu bar with selected and opened sub menu

A screenshot showing the coloring of an opened sub menu right below the menu bar.
Comment 11 Martin Lemburg 2017-08-20 22:38:19 UTC
Created attachment 135680 [details]
Screenshot of the about dialog documenting the LibreOffice version
Comment 12 Martin Lemburg 2017-11-02 11:50:05 UTC
Created attachment 137457 [details]
Screenshot of the Writer with black menu bar and right side bar (LibreOffcie 5.4.2.2) in high-contrast-mode

I tested with LibreOffce 5.4.2.2 the current state of high-contrast-mode support and found still the same issues with a black menu bar and a black right side bar.
Additionally the color used for hovered menu items has still an insufficient contrast to the used font/foreground color.

BTW Testing in high-contrast-mode is not that difficult! Press LeftAlt+LeftShift+PrintScr to toggle the high-contrast-mode with its default or last used high-contrast-theme/design.
It is even important how an application behaves, if the high-contrast-mode changes during the runtime!
Comment 13 Martin Lemburg 2017-11-02 11:50:54 UTC
BTW I use now Windows 10 Pro, not Windows 7 Pro anymore and have still the same issues.
Comment 14 QA Administrators 2018-11-03 03:50:54 UTC Comment hidden (noise)
Comment 15 Buovjaga 2019-08-17 12:31:05 UTC
Now the sidebar deck icons stay invisible, but menu bar colour has changed to "gray text on gray background" as reported in bug 124672.
I tested with all Win 10 high contrast themes. The theme High contrast #2 shows green text for menus. High contrast white shows black text for menus, but Sidebar icons are still invisible.
Comment 16 QA Administrators 2021-11-26 04:44:10 UTC Comment hidden (noise)
Comment 17 Timur 2022-09-29 12:49:51 UTC
Menu bar still wrong color with LO 7.5+.
Comment 18 Timur 2022-09-29 13:08:58 UTC
*** Bug 149688 has been marked as a duplicate of this bug. ***
Comment 19 Timur 2022-09-29 13:11:56 UTC
I mark Major-High as this hinders users who probably had s reason to use HC, it's not some fashion color. And it looks ugly and embarrassing.
Comment 20 Timur 2022-09-29 14:06:26 UTC
Created attachment 182731 [details]
Menu compared in MSO and LO 5.0 6.0 7.0

This looks like a regression to me. Was better with 5.0, lost until 6.0.
Comment 21 Timur 2022-09-29 14:25:49 UTC
*** Bug 107921 has been marked as a duplicate of this bug. ***
Comment 22 Xisco Faulí 2022-10-06 14:19:23 UTC
(In reply to Timur from comment #20)
> Created attachment 182731 [details]
> Menu compared in MSO and LO 5.0 6.0 7.0
> 
> This looks like a regression to me. Was better with 5.0, lost until 6.0.

it looks worse definitely. Adding regression keyword
Comment 23 Caolán McNamara 2022-10-06 19:14:14 UTC
https://git.libreoffice.org/core/commit/28bd6ad2318208644c13d355e91977389053170f will like fix the sidebar icons (same as part of bug #150622)
Comment 24 Caolán McNamara 2022-10-06 19:57:13 UTC
https://gerrit.libreoffice.org/c/core/+/141034 for windows menu
Comment 25 Commit Notification 2022-10-06 22:15:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6d724a494e37412c3fd2e5d0e5e54bda177c4108

tdf#98067 get menu readable in windows high contrast mode

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 26 Commit Notification 2022-10-07 00:46:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/6bd8ff51dd33e14d3e411630c8366a26e9550e77

tdf#98067 get menu readable in windows high contrast mode

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 27 V Stuart Foote 2022-10-07 15:42:28 UTC
Working correctly now with 20221007 nightly, main menu and Sidebar's Tab bar both visible. Still a bit of an issue that our HighContrast mode locks assignment of only the base Sifr icon theme.  Sifr (Dark) might be more appropriate depending on bg/fg needs. Also for scaling UI the SVG flavors might be preferred.

Needs a new BZ issue for that.

=-testing-=

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 6d724a494e37412c3fd2e5d0e5e54bda177c4108
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 28 Commit Notification 2022-10-07 18:25:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8bc5c3bfdb5717f4bff0a513c5c2d17cd728771d

Related: tdf#98067 use EP_EDITBORDER_NOSCROLL for Edits

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 29 Commit Notification 2022-10-07 18:26:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4cb11d8a6682fecd661b926a417ae7f26f76e7db

Related: tdf#98067 do RollOver for Edit as well as SpinButton

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 30 Commit Notification 2022-10-07 18:28:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/82ad6bc4e8c081bfb547ad10d29885cbdd0e8ea1

Related: tdf#98067 get high contrast hover/default button text color right

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 31 Caolán McNamara 2022-10-07 18:58:41 UTC
bug 124672 exists for sifr vs sifr_dark as hicontrast icon theme choices
Comment 32 Commit Notification 2022-10-09 02:37:04 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/75fd9e5a6947bc370cf230afe32bbf755a91e2ea

Related: tdf#98067 get high contrast hover/default button text color right

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 33 Commit Notification 2022-10-09 02:39:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/49f5b1a2750ec8f20d983c91ee99cb056a536901

tdf#98067 get menu readable in windows high contrast mode

It will be available in 7.3.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 34 Buovjaga 2022-12-12 14:51:25 UTC
*** Bug 141757 has been marked as a duplicate of this bug. ***