tdf#98067 get menu readable in windows high contrast mode

possibly a problem since:

commit 9c5a22d19708eae17ad9880422bd03e81ea48c5d
Date:   Thu Jun 21 17:55:53 2012 +0200

    aero toolbar: Extend the drawing of the toolbar to the menubar area.

Change-Id: If76be9bf09a19992dafedf16d7e577acf1bc500d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141054
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>