vcl/win/gdi/salnativewidgets-luna.cxx
@@ -896,7 +896,8 @@ static bool ImplDrawNativeControl( HDC hDC, HTHEME hTheme, RECT rc,
             }
 
             // make it more compatible with Aero
-            if( ImplGetSVData()->maNWFData.mbDockingAreaAvoidTBFrames )
+            if (ImplGetSVData()->maNWFData.mbDockingAreaAvoidTBFrames &&
+               !Application::GetSettings().GetStyleSettings().GetHighContrastMode())
             {
                 impl_drawAeroToolbar( hDC, rc, nPart == ControlPart::DrawBackgroundHorz );
                 return true;
@@ -927,7 +928,8 @@ static bool ImplDrawNativeControl( HDC hDC, HTHEME hTheme, RECT rc,
                 }
 
                 // make it more compatible with Aero
-                if( ImplGetSVData()->maNWFData.mbDockingAreaAvoidTBFrames )
+                if (ImplGetSVData()->maNWFData.mbDockingAreaAvoidTBFrames &&
+                    !Application::GetSettings().GetStyleSettings().GetHighContrastMode())
                 {
                     impl_drawAeroToolbar( hDC, rc, true );
                     return true;
